MMB (Middle Mouse Button) Shortcut to constraint axis in the graph editor is not working #113320

Closed
opened 2023-10-06 06:08:32 +02:00 by Prashan Subasinghe · 3 comments

System Information
Operating system: Windows
Graphics card: Titan RTX

Blender Version
Broken: blender-4.0.0-beta+v40.2f3e3cda5103-windows.amd64-release
Worked: 3.6.2

Short description of error
In 3.6.2 Animation Graph Editor has a MMB shortcut; when you MMB click while moving a point/key it locks the movement to the x- or y-axis. This function does not work in 4.0.

Exact steps for others to reproduce the error
Based on the default startup or an attached .blend file (as simple as possible).

keyframe two positions of the default cube at different times.
Switch to the graph editor.
select a point/key.
Press G to move.
MMB click to lock to x- or y-axis, and it should constraint to the axis but it does not.

**System Information** Operating system: Windows Graphics card: Titan RTX **Blender Version** Broken: blender-4.0.0-beta+v40.2f3e3cda5103-windows.amd64-release Worked: 3.6.2 **Short description of error** In 3.6.2 Animation Graph Editor has a MMB shortcut; when you MMB click while moving a point/key it locks the movement to the x- or y-axis. This function does not work in 4.0. **Exact steps for others to reproduce the error** Based on the default startup or an attached .blend file (as simple as possible). keyframe two positions of the default cube at different times. Switch to the graph editor. select a point/key. Press G to move. MMB click to lock to x- or y-axis, and it should constraint to the axis but it does not.
Prashan Subasinghe added the
Priority
Normal
Status
Needs Triage
Type
Report
labels 2023-10-06 06:08:33 +02:00

I've seen a similar report. In that case, "Transform Navigation with Alt" was disabled.

Can you check if this is your case?

If that's the case, the shortcut is now Alt + MMB.

I've seen a similar report. In that case, "Transform Navigation with Alt" was disabled. Can you check if this is your case? If that's the case, the shortcut is now `Alt` + `MMB`.
Germano Cavalcante added
Status
Needs Information from User
and removed
Status
Needs Triage
labels 2023-10-06 16:26:17 +02:00

Hello! Alt + MMB still did not work. tried other combinations. I can't seem to constrain the Grab/move to an axis.

Hello! Alt + MMB still did not work. tried other combinations. I can't seem to constrain the Grab/move to an axis.

I can confirm the problem.
It was caused by 586ffcd669.

I can confirm the problem. It was caused by 586ffcd669.
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-10-07 17:12:15 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#113320
No description provided.