Fix #113320: 'Automatic Constraint' not working in 2D editors

Caused by 586ffcd669

The condition `(t->flag & T_2D_EDIT)` went unnoticed.